# app/controllers/reviews/get/handler.rb
@@ -1,0 +1,7 @@
+
+module Reviews::Get::Handler
+  include Middlewares::GetListOrObject
+  def get
+    render json: make_query_response(Review, params, search_by: [:course_id])
+  end
+end
