# app/controllers/reviews/post/document.rb
@@ -1,10 +1,10 @@
 # module Courses::Post::Document
 #
 # end
-def students_post_document
-  path "/students" do
-    post "Create student." do
-      tags "Students"
+def reviews_post_document
+  path "/reviews" do
+    post "Create review." do
+      tags "Reviews"
       consumes "application/json"
       parameter name: :review, in: :body, schema: {
         type: :object,
@@ -12,11 +12,12 @@ def students_post_document
           id: {type: :integer},
           profile: {type: :integer},
           course_id: {type: :integer},
-          pass_percentage: {type: :numeric},
-          state: {type: :string}
+          text: {type: :string},
+          mark_of_theory: {type: :string},
+          mark_of_practice: {type: :string}
         },
       }
-      response "201", "Student created" do
+      response "201", "Review created" do
         let(:company) { {
           id: 1,
           title: "Achievement",
